<resources>
    <string name="app_name">Front Dti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminders">Lembretes</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="back_button">Back Button</string>
    <string name="reminder">Lembrete</string>
    <string name="date">Data - dd/mm/aaaa</string>
    <string name="confirm">Confirmar</string>
    <string name="estamos_sem_lembretes">Estamos sem lembretes</string>
    <string name="empty_field">Preencha todos os campos</string>
    <string name="confirm_error">Erro ao confirmar lembrete</string>
    <string name="cant_navigate_without_connection">Não é possivel navegar para tela de atualização offline</string>
    <string name="impossible_without_connection">Não é possivel fazer alterações sem estar conectado</string>
    <string name="cant_delete_without_connection">Não é possivel deletar sem conexão</string>
</resources>